- revised the parsing script to a bunch of modular files and upped node to version 13 to support modules - added a lot of utility scripts to abstract the parsing functionality - added more notes along the way

--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "main": "index.js",
   "author": "Patrick Sullivan <psullivan6@gmail.com>",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "serve": "serve public",
     "parse": "node ./scripts/parse"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
+    "node-fetch": "^2.6.0",
     "serve": "^11.3.0"
   }
 }
