--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "type": "module",
   "scripts": {
     "serve": "serve public",
-    "parse": "node ./scripts/parse"
+    "parse": "node ./scripts/parse",
+    "build": "node ./scripts/build"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
     "node-fetch": "^2.6.0",
+    "pug": "^2.0.4",
     "serve": "^11.3.0"
   }
 }
