- sidebar button area styling - define node version in the package.json to ensure proper a build - added homepage "all" slugs page compilation

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Patrick Sullivan <psullivan6@gmail.com>",
   "license": "MIT",
   "type": "module",
+  "engines": {
+    "node": ">=13"
+  },
   "scripts": {
     "serve": "serve public",
     "parse": "node ./scripts/parse",
