Downgrade Node for now - revised node engine to 12 for deployment - revised start script to dev, so it wouldn't conflict with now scripts - revised all scripts to use cjs format instead of es6 module

--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "license": "MIT",
   "type": "module",
   "engines": {
-    "node": ">=13"
+    "node": "12.x"
   },
   "scripts": {
     "serve": "serve public",
     "parse": "node ./scripts/parse",
     "build": "node ./scripts/build",
-    "start": "yarn build && yarn serve"
+    "dev": "yarn build && yarn serve"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
